log
Fri, May 16, 2025 10:22:23 PM: 
 sudoku.c | 31 +++++++++++++++++++++++++++++++
 1 file changed, 31 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:70:9: error: unused variable 'k' [-Werror=unused-variable]
     int k = 0, flag = 1;
         ^
cc1.exe: all warnings being treated as errors
3f0e54c
Fri, May 16, 2025 10:22:38 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
ac07746
Fri, May 16, 2025 11:03:35 PM: 
 sudoku.c | 37 ++++++++++++++++++++++++++++++-------
 1 file changed, 30 insertions(+), 7 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'enFila':
sudoku.c:57:9: error: this 'if' clause does not guard... [-Werror=misleading-indentation]
         if (sudo[n][y] == cand && n != posx);
         ^~
sudoku.c:58:13: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if'
             return 0;
             ^~~~~~
cc1.exe: all warnings being treated as errors
f757913
Fri, May 16, 2025 11:03:53 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
55d586a
Fri, May 16, 2025 11:04:09 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
de5513c
Fri, May 16, 2025 11:05:23 PM: 
 sudoku.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  2|4
total_score: 15/70
ee7892f
Fri, May 16, 2025 11:08:25 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
b4af4b6
Fri, May 16, 2025 11:31:41 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
ec990dc
Fri, May 16, 2025 11:32:32 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
9fc31f8
